--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>3.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.example</groupId>
-    <artifactId>ShareIt</artifactId>
+    <groupId>ru.practicum</groupId>
+    <artifactId>shareit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ShareIt</name>
     <description>ShareIt</description>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.3.Final</version> <!-- Актуальная версия -->
+            <version>1.5.3.Final</version>
         </dependency>
 
         <dependency>
